--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     
     <div class="container">
         <div class="search-container">
-            <input type="text" id="movie-name" placeholder="Enter movie name here..." value="Harry Potter">
+            <input type="text" id="movie-name" placeholder="Enter movie name here..." value="Friends">
             <button id="search-btn">Search</button>
         </div>
         <div id="result"></div>
